# testonnx

./: CMakeLists.txt  a.cc
